# advanced-agentic-dev-patterns

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPER.md  LICENSE  LICENSE-APACHE-2.0  README.md  README_ZH.md  mkdocs.en.yml  mkdocs.zh.yml  pyproject.toml
.claude/commands/: review-and-optimize-doc.md
.github/workflows/: ci.yml  deploy-docs.yml  deploy-docs.yml.disabled  deploy-site.yml  publish-plugin.yml
docs/en/: index.md
docs/zh/: index.md
scripts/: build_docs.py
scripts/tests/: test_build_docs.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/scripts/: build-llm-bundle.mjs  sync-content.mjs
site/src/: content.config.ts
wikis/: index.md  log.md
wikis/concepts/: aci.md  action-metamorphic-relations.md  activation-intervention.md  agent-card.md  agent-interoperability.md  agent-native-software.md  agent-os.md  agent-reliability-evaluation.md  agent-resource-control.md  agent-sandboxing.md  agent-scheduling.md  agent-skills.md  agentic-systems.md  ai-summers-history.md  aitia.md  augmented-llm.md  autonomy-slider.md  backdoor-criterion.md  bag-of-heuristics.md  bayesian-induction.md  bitter-lesson.md  causal-contextualism.md  causal-dag.md  causal-inner-product.md  causal-intervention.md  causal-models.md  causal-relata.md  causation-hume.md  chaos-engineering-for-agents.md  claude-code-permission-system.md  cli-vs-gui-automation.md  coastline-paradox.md  compositionality.md  constant-conjunction.md  constrained-decoding.md  context-compression.md  context-engineering.md  context-free-grammar-llm.md  (+95 more)
(+917 files in other folders)
